--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@ db/*.sqlite3
 log/*.log
 tmp/
 .sass-cache/
+*.*~
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
